# quorum-git-agent

./: .coverage  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  start.ps1
.github/workflows/: ci.yml
app/: __init__.py  analyzer.py  config.py  database.py  demo_data.py  github_client.py  main.py  mcp_server.py  schemas.py
app/static/: app.js  index.html  styles.css
quorum_git_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_analyzer.py  test_api.py  test_health.py
